# homeworkMPI

./: CMakeLists.txt  Task1.cpp  Task10.cpp  Task11.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
